RESOLVED FIXED74007
[Qt] Fix non-animated pinch-zoom scale commit.
https://bugs.webkit.org/show_bug.cgi?id=74007
Summary [Qt] Fix non-animated pinch-zoom scale commit.
Jocelyn Turcotte
Reported 2011-12-07 10:03:14 PST
[Qt] Fix non-animated pinch-zoom scale commit.
Attachments
Patch (5.40 KB, patch)
2011-12-07 10:06 PST, Jocelyn Turcotte
kenneth: review+
Jocelyn Turcotte
Comment 1 2011-12-07 10:06:20 PST
Jocelyn Turcotte
Comment 2 2011-12-08 07:33:09 PST
Note You need to log in before you can comment on or make changes to this bug.